--- a/setup.cfg
+++ b/setup.cfg
@@ -14,3 +14,6 @@ versionfile_source = skopt/_version.py
 versionfile_build = skopt/_version.py
 tag_prefix =
 parentdir_prefix = skopt-
+
+[aliases]
+test=pytest
